src/App.css
* {
  box-sizing: border-box;
  margin: 0;
}

:root {
  --primary-color: rgb(117, 9, 171);
}

.header{
  line-height: 3rem;
  padding: 5px;
}

table{
  background-color: white;
  color: black;
  text-align: left;
  margin: 20px auto;
  border: 1px solid black;
  min-width: 80%;
}

table thead{
  width: 100%;
  background-color: var(--primary-color);
  color: white;
}

table th{
  text-align: center;
}

table td, th{
  padding: 5px;
  border: 1px solid black;
  align-content: center;
  
}

#comparisonForm {
 display: flex;
 flex-wrap: wrap;
 justify-content: space-around;
 background-color: rgba(142, 131, 131, 0.8);
 max-width: 60%;
 padding: 5px;
 border-radius: 5px;
 margin: auto;
}

#comparisonForm input{
  margin: 3px;
}

.dashboard {
  margin: auto;
  width: 100%;
}

#tableDiv {
  overflow-x: scroll;
  width: 90%;
  margin: auto;
}

.controls button{
  background-color: var(--primary-color);
  color: white;
  border: black solid 1px;
  border-radius: 5px;
  margin: 2px;
  
}

.controls button {
  align-items: center;
  background-color: #fff;
  border-radius: 24px;
  border-style: none;
  box-shadow: rgba(0, 0, 0, .2) 0 3px 5px -1px,rgba(0, 0, 0, .14) 0 6px 10px 0,rgba(0, 0, 0, .12) 0 1px 18px 0;
  box-sizing: border-box;
  color: #3c4043;
  cursor: pointer;
  display: inline-flex;
  font-family: "Google Sans",Roboto,Arial,sans-serif;
  font-size: 14px;
  font-weight: 500;
  height: 40px;
  letter-spacing: .25px;
  padding: 2px 24px;
  transition: box-shadow 280ms cubic-bezier(.4, 0, .2, 1),opacity 15ms linear 30ms,transform 270ms cubic-bezier(0, 0, .2, 1) 0ms;
}

.controls button:hover {
  background: #F6F9FE;
  color: #174ea6;
}

.controls button:active {
  box-shadow: 0 4px 4px 0 rgb(60 64 67 / 30%), 0 8px 12px 6px rgb(60 64 67 / 15%);
  outline: none;
}

.controls button:focus {
  outline: none;
  border: 2px solid #4285f4;
}

.controls button:not(:disabled) {
  box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
}

.controls button:not(:disabled):hover {
  box-shadow: rgba(60, 64, 67, .3) 0 2px 3px 0, rgba(60, 64, 67, .15) 0 6px 10px 4px;
}

.controls button:not(:disabled):focus {
  box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
}

.controls button:not(:disabled):active {
  box-shadow: rgba(60, 64, 67, .3) 0 4px 4px 0, rgba(60, 64, 67, .15) 0 8px 12px 6px;
}

.controls button:disabled {
  box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
}

.controls a {
  text-decoration: none;
}
.controls {
  display: flex;
  justify-content: space-evenly;
  padding: 10px 100px 20px 100px;
}

.controls button.next, button.prev{
  background-color: var(--primary-color);
  color: white;
}

tr.tableBreakHeading td{
  font-weight: bold;
  text-align: center;
}

.pie {
  width: 25px;
  height: 25px;
  text-align: center;
  margin: auto;
}

td.e-0 {
  background-color: #ffcccc;
}

td.e-1 {
  background-color: #f0dce4;
}

td.e-2 {
  background-color: #e0ecf4;
}

td.e-3 {
  background-color: #e8ecec;
}

td.e-4 {
  background-color: #f0f4dc;
}

td.e-Y{
  color: green;
}

td.e-N{
  color: red;
}

.navbar {
  display: flex;
  justify-content: space-between;
  background-color: var(--primary-color);
  color: white;
}

.navbar ul{
  list-style: none;
  display: flex;
  justify-content: flex-end;
  flex-wrap: wrap;
}

.navbar ul li{
  margin: 20px;
}

.navbar ul li a {
  color: white;
  outline: none;
  text-decoration:solid;
  padding: 5px;
  border-radius: 5px;
}

.navbar ul li a:not(.active):hover{
  background-color: white;
  color: black;
}

.navbar .active {
  pointer-events: none;
  background-color: black;
}

.center {
  text-align: center;
}

.tableBreak {
  background-color: rgba(117, 9, 171, 0.15);
}

button.success {
  background-color: green;
  color: white;
}

